# ai-progress-monitor

./: .claudeignore  .gitignore  AGENTS.md  ASSET_LICENSE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: validate.yml
docs/: ai-progress-monitor-v0.2.1-user-guide.md  release-checklist.md
docs/prd/: 2026-06-30-ai-work-progress-monitor-prd.md  2026-07-01-ai-sloth-pet-monitor-ai-coding-prd.md  2026-07-01-ai-sloth-pet-monitor-iteration-prd.md  2026-07-11-pet-appearance-theme-switching-prd.md  (+1 more)
scripts/: build_release.py  check_macos_floating_dev.sh  doctor.py  e2e_smoke.py  emit_event.py  monitor_claude.bat  monitor_claude.sh  monitor_codex.bat  monitor_codex.sh  monitor_command.py  monitor_qoder.bat  monitor_qoder.sh  monitor_workbuddy.bat  monitor_workbuddy.sh  run_macos_floating_dev.sh  run_web_demo.bat  run_web_demo.sh  start_floating_monitor.bat  start_monitor.bat  start_monitor.sh  validate_release.py
tests/: test_actions.py  test_classifier.py  test_cleanup.py  test_docs_prd_alignment.py  test_doctor.py  test_e2e_smoke.py  test_macos_app_bundle.py  test_macos_geometry.py  test_macos_native_companion.py  test_notifier.py  test_preferences.py  test_release_bundle.py  test_service.py  test_sources.py  test_start_scripts.py  test_store.py  test_terminal_bridge.py  test_web_doctor_api.py  test_web_launch.py  test_web_security.py  test_web_ui.py  test_web_ui_behavior.py  test_window_focus.py  test_windows_native_companion.py
(+24 files in other folders)
