[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-progress-monitor"
version = "0.1.0"
description = "Low-intrusion desktop companion for Claude Code and Codex progress"
requires-python = ">=3.9"
authors = [{ name = "AutumnGao" }]
license = { file = "LICENSE" }

[project.scripts]
ai-progress-monitor = "ai_progress_monitor.web:main"

[tool.setuptools.packages.find]
where = ["src"]
